--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -37,9 +37,13 @@ body {
 }
 
 .nav li a.nav-link:hover {
-  /* color: #0328EE !important; */
-  text-decoration: underline;
-  transition: color 0.3s ease, text-decoration 0.3s ease;
+  transition: color 0.5s ease, text-decoration 0.5s ease;
+  border-radius: 20px;
+  background: hsla(231, 98%, 16%, 1);
+  background: radial-gradient(circle, hsla(231, 98%, 16%, 1) 0%, hsla(230, 100%, 20%, 1) 100%);
+  background: -moz-radial-gradient(circle, hsla(231, 98%, 16%, 1) 0%, hsla(230, 100%, 20%, 1) 100%);
+  background: -webkit-radial-gradient(circle, hsla(231, 98%, 16%, 1) 0%, hsla(230, 100%, 20%, 1) 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#010D50", endColorstr="#001167", GradientType=1 );
 }
 
 .botao1 {
@@ -69,8 +73,22 @@ body {
 }
 
 .texts{
-  padding-left: 12rem!important;
   padding-top: 9rem!important;
+}
+
+.custom-sublinhado {
+  position: relative;
+  transition: color 2s ease;
+}
+
+.custom-sublinhado::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1.5px; /* Altura do sublinhado */
+  bottom: -2px; /* Ajuste a distância entre o sublinhado e a palavra aqui */
+  left: 0;
+  background-color: #031FB4; /* Cor do sublinhado */
 }
 
 .h1{
@@ -132,11 +150,9 @@ footer{
   color: #fff;
   border: none;
   border-radius: 60px;
-  width: 600px;
+  width: 550px !important;
   height: 200px;
   margin: 0;
-
-
 }
 
 .text-center {
@@ -164,7 +180,15 @@ footer{
 .card-body{
   padding-top: 5%;
   padding-bottom: 5%;
+}
 
+.card-body2{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  border-radius: 20px;
+  background-color: #fff;
 }
 
 .container-img-background {
@@ -190,4 +214,10 @@ footer{
 
 .mb-10 {
   margin-bottom: 10%;
+}
+
+/* Estilo para o link ativo (sublinhado) */
+.nav-link.active {
+  text-decoration: underline !important;
+  border-radius: 20px;
 }
