--- a/stocktrade/src/main/resources/templates/sobrePage.html
+++ b/stocktrade/src/main/resources/templates/sobrePage.html
@@ -43,48 +43,8 @@
       href="../static/images/only-logo-bg-off.png"
     />
   </head>
-  <body>
-    <svg xmlns="../static/images/logo-bg-off.png" style="display: none">
-      <symbol id="bootstrap" viewBox="0 0 118 94">
-        <title>Bootstrap</title>
-        <path
-          fill-rule="evenodd"
-          clip-rule="evenodd"
-          d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
-        ></path>
-      </symbol>
-      <symbol id="home" viewBox="0 0 16 16">
-        <path
-          d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"
-        />
-      </symbol>
-      <symbol id="speedometer2" viewBox="0 0 16 16">
-        <path
-          d="M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4zM3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707zM2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10zm9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5zm.754-4.246a.389.389 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.389.389 0 0 0-.029-.518z"
-        />
-        <path
-          fill-rule="evenodd"
-          d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A7.988 7.988 0 0 1 0 10zm8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3z"
-        />
-      </symbol>
-      <symbol id="table" viewBox="0 0 16 16">
-        <path
-          d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"
-        />
-      </symbol>
-      <symbol id="people-circle" viewBox="0 0 16 16">
-        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-        <path
-          fill-rule="evenodd"
-          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
-        />
-      </symbol>
-      <symbol id="grid" viewBox="0 0 16 16">
-        <path
-          d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"
-        />
-      </symbol>
-    </svg>
+  <body id="sobre-page">
+    <svg xmlns="../static/images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
       <div class="container-fluid pt-3">
@@ -100,6 +60,216 @@
             />
           </a>
 
+          <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
+            <li>
+              <a
+                href="index.html"
+                class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
+                >Invista</a
+              >
+            </li>
+            <li>
+              <a
+                href="sobrePage.html"
+                class="nav-link px-2 link-dark text-color-white text-uppercase text-white active"
+                >Sobre</a
+              >
+            </li>
+            <li>
+              <a
+                href="contatoPage.html"
+                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
+                >Contato</a
+              >
+            </li>
+          </ul>
+
+          <div class="col-md-3 text-end">
+            <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4"
+              >Login</a
+            >
+
+            <a
+              href="cadastroPage.html"
+              class="btn btn-outline-primary botao1 me-4"
+              >Cadastre-se</a
+            >
+          </div>
+        </header>
+      </div>
+
+      <div class="container-fluid mb-4">
+        <div class="row justify-content-center">
+          <div class="col-md-6 mb-5 texts">
+            <h2 class="titulo h2 max-width-600px">Sobre StockTrade</h2>
+            <p class="fs-6 mt-4 mb-3 max-width-500px">
+              A StockTrade, uma empresa líder no mercado financeiro,
+              destacando-se como uma plataforma revolucionária para investidores
+              de todos os níveis. Apresenta uma interface intuitiva e um amplo
+              leque de recursos. Buscamos oferecer uma experiência única de
+              compra e venda de ações, conectando investidores a oportunidades
+              globais de crescimento.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mb-10">
+        <div class="row g-1 gy-1">
+          <!-- Linha1 dos cards -->
+          <div class="form-row">
+            <!-- Card 1 -->
+            <div class="mb-3 me-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div
+                  class="col-md-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="../static/images/seguranca-icon.png"
+                    class="img-fluid rounded-start"
+                    alt="seguranca"
+                  />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">SEGURANÇA</h5>
+                    <p class="card-text">
+                      A StockTrade apresenta ao usuário um sistema que garante a
+                      seguridade nas suas transações. Oferecendo um feedback
+                      completo das compras e vendas realizadas no site.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="mb-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div
+                  class="col-md-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="../static/images/conexao-icon.png"
+                    class="img-fluid rounded-start"
+                    alt="conexao"
+                  />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">CONEXÃO</h5>
+                    <p class="card-text">
+                      Oferecemos ao usuário um amplo mercado de trades.
+                      Atendendo as necessidades de todos os clientes
+                      independente da sua localização.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Linha2 dos cards -->
+          <div class="form-row">
+            <!-- Card 3 -->
+            <div class="mb-3 me-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div
+                  class="col-md-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="../static/images/transparencia-icon.png"
+                    class="img-fluid rounded-start"
+                    alt="transparencia"
+                  />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">TRANSPARÊNCIA</h5>
+                    <p class="card-text">
+                      A StockTrade assegura um excelente vínculo com o usuário.
+                      Disponibilizamos métodos seguros de depósito, saque e um
+                      atendimento de alta qualidade para atender todas as suas
+                      necessidades.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="mb-3 custom-card">
+              <div class="row g-0 pt-3">
+                <div
+                  class="col-md-4 d-flex justify-content-center align-items-center"
+                >
+                  <img
+                    src="../static/images/edu-financeira-icon.png"
+                    class="img-fluid rounded-start"
+                    alt="edu-financeira"
+                  />
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">EDUCAÇÃO FINANCEIRA</h5>
+                    <p class="card-text">
+                      Aprenda a gerir suas finanças da melhor maneira. A
+                      StockTrade proporciona dicas e vídeos para aprimorar a sua
+                      gestão financeira.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer py-3 container-fluid mt-5">
+        <div
+          class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
+        >
+          <!-- Logo à esquerda -->
+          <a href="index.html">
+            <img
+              src="../static/images/logo-bg-off.png"
+              alt="Logo"
+              class="img-fluid logo small-logo2 me-5 ms-5"
+            />
+          </a>
+
+          <!-- Imagens à direita -->
+          <div class="d-flex">
+            <img
+              src="../static/images/insta.png"
+              alt="Instagram"
+              class="img-fluid logo small-logo me-1"
+            />
+
+            <img
+              src="../static/images/facebook.png"
+              alt="Facebook"
+              class="img-fluid logo small-logo me-1"
+            />
+
+            <img
+              src="../static/images/linkedin.png"
+              alt="LinkedIn"
+              class="img-fluid logo small-logo me-1"
+            />
+          </div>
+        </div>
+
+        <div
+          class="mx-5 d-flex justify-content-between align-items-center pb-2 ps-5"
+        >
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
@@ -130,173 +300,28 @@
               >
             </li>
           </ul>
-
-          <div class="col-md-3 text-end">
-            <!-- <button type="button" class="btn btn-outline-primary botao1 me-4">
-              Login
-            </button> -->
-
-            <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4">Login</a>
-
-            <a href="cadastroPage.html" class="btn btn-outline-primary botao1 me-4">Cadastre-se</a>
- 
-            <!-- <button type="button" class="btn btn-primary botao1">
-              Cadastre-se
-            </button> -->
-          </div>
-        </header>
-      </div>
-      
-      <div class="container-fluid mt-4 mb-4">
-        <div class="row justify-content-center">
-          <div class="col-md-6 mt-5 texts">
-            <h2 class="titulo h2 max-width-600px">Sobre StockTrade</h2>
-            <p class="fs-6 mt-4 mb-3 max-width-500px">
-                A StockTrade, uma empresa líder no mercado financeiro, destacando-se como uma plataforma revolucionária para investidores de todos os níveis. Apresenta uma interface intuitiva e um amplo leque de recursos. Buscamos oferecer uma experiência única de compra e venda de ações, conectando investidores a oportunidades globais de crescimento.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container mb-10">
-        <div class="row g-0">
-
-          <!-- Linha1 dos cards -->
-          <div class="form-row">
-            <!-- Card 1 -->
-            <div class="mb-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div class="col-md-4 d-flex justify-content-center align-items-center">
-                  <img src="../static/images/seguranca-icon.png" class="img-fluid rounded-start" alt="seguranca">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">SEGURANÇA</h5>
-                    <p class="card-text">A StockTrade apresenta ao usuário um sistema que garante a seguridade nas suas transações. Oferecendo um feedback completo das compras e vendas realizadas no site.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Card 2 -->
-            <div class="mb-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div class="col-md-4 d-flex justify-content-center align-items-center">
-                  <img src="../static/images/conexao-icon.png" class="img-fluid rounded-start" alt="conexao">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">CONEXÃO</h5> 
-                    <p class="card-text">Oferecemos ao usuário um amplo mercado de trades. Atendendo as necessidades de todos os clientes independente da sua localização.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          
-           
-          <!-- Linha2 dos cards -->
-          <div class="form-row">
-         <!-- Card 3 -->
-          <div class="mb-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div class="col-md-4 d-flex justify-content-center align-items-center">
-                  <img src="../static/images/transparencia-icon.png" class="img-fluid rounded-start" alt="transparencia">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">TRANSPARÊNCIA</h5>
-                    <p class="card-text">A StockTrade assegura um excelente vínculo com o usuário. Disponibilizamos métodos seguros de depósito, saque e um atendimento de alta qualidade para atender todas as suas necessidades.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Card 4 -->
-            <div class="mb-3 custom-card">
-              <div class="row g-0 pt-3">
-                <div class="col-md-4 d-flex justify-content-center align-items-center">
-                  <img src="../static/images/edu-financeira-icon.png" class="img-fluid rounded-start" alt="edu-financeira">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">EDUCAÇÃO FINANCEIRA</h5>
-                    <p class="card-text">Aprenda a gerir suas finanças da melhor maneira. A StockTrade proporciona dicas e vídeos para aprimorar a sua gestão financeira.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
-          </div>
-          </div>  
-
- 
-      <footer class="footer py-3 container-fluid mt-5">
-        <div class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5">
-          <!-- Logo à esquerda -->
-          <img
-            src="../static/images/logo-bg-off.png"
-            alt="Logo"
-            class="img-fluid logo xsmaller-logo ps-5"
-          />
-      
-          <!-- Imagens à direita -->
-          <div class="d-flex">
-            <img
-              src="../static/images/insta.png"
-              alt="Instagram"
-              class="img-fluid logo small-logo me-1"
-            />
-      
-            <img
-              src="../static/images/facebook.png"
-              alt="Facebook"
-              class="img-fluid logo small-logo me-1"
-            />
-      
-            <img
-              src="../static/images/linkedin.png"
-              alt="LinkedIn"
-              class="img-fluid logo small-logo me-1"
-            />
-          </div>
-        </div>
-
-        <div class="mx-5 d-flex justify-content-between align-items-center pb-2 ps-5">
-          <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
-            <li>
-              <li>
-                <a
-                  href="#"
-                  class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
-                  >Home</a
-                >
-              </li>
-              <a
-                href="#"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Invista</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Sobre</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Contato</a
-              >
-            </li>
-          </ul>
         </div>
       </footer>
+    </main>
+
+    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // Verifica qual página você está com base no ID do corpo (body)
+        var currentPage = document.body.id;
+
+        // // Remove a classe 'active' de todos os links no cabeçalho
+        // var navLinks = document.querySelectorAll(".nav-link");
+        // navLinks.forEach(function (link) {
+        //   link.classList.remove("active");
+        // });
+
+        // Adiciona a classe 'active' ao link relevante com base na página atual
+        if (currentPage === "home-page") {
+          document.querySelector(".nav-link.home").classList.add("active");
+        }
+      });
+    </script>
+  </body>
+</html>
