--- a/stocktrade/src/main/resources/templates/login.html
+++ b/stocktrade/src/main/resources/templates/login.html
@@ -265,8 +265,8 @@
             'Content-Type': 'application/json'
           },
           body: JSON.stringify({
-            username: username,
-            password: password
+            email: email,
+            senha: password
           })
         })
   
